--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+      <link rel="stylesheet" href="styles.css">
+        <style>
+
+
+
+
+        </style>
+
     <title>Methods for Adding CSS</title>
+
   </head>
   <body>
+
+    <div style="color: green; background-color: aquamarine;">Hello</div>
+
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
     <button>Inline Method</button>
