--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+
+    <p class="redandblack"> Number 1 - I'm a class!</p>
+    <div id="bluetext">Number 2 - I'm one ID.</div>
+    <p class="redandblack diffsized">Number 3 - I'm a class, but cooler!</p>
+    <div id="blacktextgreenback" class="diffsized">Number 4 - I'm another ID.</div>
+    <p class="redandblack">Number 5 - I'm a class!</p>
+
   </body>
 </html>
